--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -7,11 +7,18 @@
 
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE = edge">
     <meta name="viewport" content="width=device-width" />
     <title>Tournaments - @ViewBag.Title</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
     <link href="~/Content/style.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/b6042e8b1f.js"></script>
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/additional-methods.min.js"></script>
+    <!-- BOOTSTRAPPER -->
+    <script src="~/Scripts/bootstrapper.js"></script>
+
 
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -32,6 +39,8 @@
     <main>
         @RenderBody()
     </main>
-<div id="footer"></div>
+    <footer >
+        <p class="text-center">Team Golf &copy; @DateTime.Now.Year</p>
+    </footer>
 </body>
 </html>
