--- a/Capstone.Web/Content/style.css
+++ b/Capstone.Web/Content/style.css
@@ -8,10 +8,17 @@ body {
 
 main {
     flex: 1;
+    margin-left: 20px;
+    margin-right: 20px;;
+    margin-top: -10px;
+    padding: 10px;
+    background-color: red;
 }
 
-main, footer {
+footer {
     padding: 10px;
+    background-color: blue;
+    height: 60px;
 }
 header, img {
     height:100%;
