--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <title>Tournaments - @ViewBag.Title</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
     <link href="~/Content/style.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/b6042e8b1f.js"></script>
 
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/additional-methods.min.js"></script>
