removed stuff from the index view

--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@using Capstone.Web.Models;
+@model List<Tournament>
 @{
     ViewBag.Title = "Index";
 }
 
-<section>
-    <h2>List of tournaments</h2>
-    <h4>Need to wait until there is data</h4>
-</section>
+
 
