Added Join to detail view

--- a/Capstone.Web/Views/Tournament/Detail.cshtml
+++ b/Capstone.Web/Views/Tournament/Detail.cshtml
@@ -31,3 +31,8 @@
 
 </div>
 
+@using (Html.BeginForm("JoinTournament", "Tournament", FormMethod.Post))
+{
+        <button>Join This Tournament!</button>
+}
+
