--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -11,14 +11,18 @@
             <h1>Featured Tournaments</h1>
         </div>
     </div>
-    @for (int i = 0; i < 5; i++)
+    @foreach (var Tournament in Model)
     {
         <div class="row" style="border-bottom: 1px solid grey; padding-bottom:10px; padding-top:10px;">
             <div class="col-md-3">
                 <a href="google.com"><img src="~/Content/Images/Icon_Tournament.png" /></a>
             </div>
             <div class="col-md-9">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                <h2>@Tournament.Name </h2> <span>By @Tournament.OrganizerId</span>
+                
+                <p><strong>Start Date: @Tournament.StartDate.ToShortDateString()</strong></p>
+                <p><strong>End Date: @Tournament.EndDate.ToShortDateString()</strong></p>
+                <p>Tournament Description will go here  </p>
             </div>
         </div>
     }
