--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -7,25 +7,63 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
             <h1>Featured Tournaments</h1>
         </div>
     </div>
-    @foreach (var Tournament in Model)
-    {
-        <div class="row" style="border-bottom: 1px solid grey; padding-bottom:10px; padding-top:10px;">
-            <div class="col-md-3">
-                <a href="google.com"><img src="~/Content/Images/Icon_Tournament.png" /></a>
-            </div>
-            <div class="col-md-9">
-                <h2>@Tournament.Name </h2> <span>By @Tournament.OrganizerId</span>
-                
-                <p><strong>Start Date: @Tournament.StartDate.ToShortDateString()</strong></p>
-                <p><strong>End Date: @Tournament.EndDate.ToShortDateString()</strong></p>
-                <p>Tournament Description will go here  </p>
-            </div>
+    <div class='title-stripe'>
+        <div class='container-fluid -with-content-gutters'>
+            <h1>
+               Tournaments
+            </h1>
+            <a class='btn btn-default game-filter-toggle' href='#'>
+                All Games
+                <i class="fa fa-angle-down"></i>
+            </a>
+            <br>
+            &nbsp;
         </div>
-    }
-    
-</div>
+    </div>
 
+    <div class='container-fluid -with-content-gutters -width-limited'>
+        <div class='table-responsive'>
+            <table class='table table-striped table-bordered'>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Game</th>
+                        <th class='center'>Type</th>
+                        <th class='center'>Participants</th>
+                        <th class='center'>Started On</th>
+                        <th class='center'>Progress</th>
+                        <th>Organizer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var Tournament in Model)
+                    {
+                        <tr>
+                            <td style='white-space: normal;'>
+                                <a href="#">@Tournament.Name</a>
+                            </td>
+                            <td style='white-space: normal;'>
+                                &ndash;
+                            </td>
+                            <td class='center'>&ndash;</td>
+                            <td class='center'>@Tournament.CompetitorLimit</td>
+                            <td class='center'>@Tournament.StartDate.ToShortDateString()</td>
+                    <td>
+                        <div class='progress'>
+                            <div class='progress-bar progress-bar-success' style='width:0%'></div>
+                        </div>
+                    </td>
+                    <td class='organizer'>
+                        <a href="#">@Tournament.OrganizerId</a>
+                    </td>
+                </tr>
+                    }
+            </table>
+        </div>
+    </div>
+
+</div>
