--- a/Capstone.Web/Views/Home/Brackets.cshtml
+++ b/Capstone.Web/Views/Home/Brackets.cshtml
@@ -10,20 +10,19 @@
 
 <h2 class="text-center">First Round Brackets</h2>
 <div style="margin-left: 50px;">
-    @{var index = 1; }
-    @for (int i = 0; i < Model.Brackets.Length; i= i+2)
+
+    @for (int i = 0; i < Model.Brackets.Length; i = i + 2)
     {
         <div class="outerBox">
-            <span>Match: @index</span>
+            <span>Match: </span>
             <div class="match">
                 <div id="box_0" class="box even">
                     @Model.Brackets[i];
                 </div>
                 <hr style="margin:0px; padding:0px" />
                 <div id="box_1" class="box odd">
-                    @Model.Brackets[i];
+                    @Model.Brackets[i + 1];
                 </div>
-                @index++;
             </div>
         </div>
     }
