bracket logic for first seed

--- a/Capstone.Web/Views/Home/Brackets.cshtml
+++ b/Capstone.Web/Views/Home/Brackets.cshtml
@@ -14,7 +14,7 @@
     @for (int i = 0; i < Model.Brackets.Length; i = i + 2)
     {
         <div class="outerBox">
-            <span>Match: </span>
+            <span> </span>
             <div class="match">
                 <div id="box_0" class="box even">
                     @Model.Brackets[i];
