commiting changes before merge and switching to workspace2 branch

--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                 {
                 <tr>
                     <td style='white-space: normal;'>
-                        <a href="#">@Tournament.Name</a>
+                        @Html.ActionLink(Tournament.Name,"Detail","Tournament", new { id = Tournament.Id }, null)
                     </td>
                     <td style='white-space: normal;'>
                         &ndash;
