--- a/Capstone.Web/Views/Home/CreateTournament.cshtml
+++ b/Capstone.Web/Views/Home/CreateTournament.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capstone.Web.Models.Tournament
+﻿@model Capstone.Web.Models.NewTournamentViewModel
 @{
     ViewBag.Title = "CreateTournament";
 }
