fixed file path changes

--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                 {
                 <tr>
                     <td style='white-space: normal;'>
-                        @Html.ActionLink(Tournament.Name,"Detail","Tournament", new { id = Tournament.Id }, null)
+                        @Html.ActionLink(Tournament.TournamentName,"Detail","Tournament", new { id = Tournament.TournamentId }, null)
                     </td>
                     <td style='white-space: normal;'>
                         &ndash;
