--- a/Capstone.Web/Views/Users/Login.cshtml
+++ b/Capstone.Web/Views/Users/Login.cshtml
@@ -13,9 +13,9 @@
         @using (Html.BeginForm("Login", "Users", FormMethod.Post))
         {
             <div class="form-group">
-                @Html.LabelFor(m => m.Username)
-                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "User Name" })
-                @Html.ValidationMessageFor(m => m.Username)
+                @Html.LabelFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "User Name" })
+                @Html.ValidationMessageFor(m => m.Email)
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Password)
