--- a/Capstone.Web/Views/Users/Register.cshtml
+++ b/Capstone.Web/Views/Users/Register.cshtml
@@ -11,9 +11,9 @@
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
             <div class="form-group">
-                @Html.LabelFor(m => m.Username)
-                @Html.TextBoxFor(m => m.Username, new { placeHolder = "User Name", @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Username)
+                @Html.LabelFor(m => m.EmailAddress)
+                @Html.TextBoxFor(m => m.EmailAddress, new { placeHolder = "Email", @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.EmailAddress)
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Password)
@@ -26,9 +26,9 @@
                 @Html.ValidationMessageFor(m => m.ConfirmPassword)
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.EmailAddress)
-                @Html.TextBoxFor(m => m.EmailAddress, new { placeHolder = "Email Address", @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.EmailAddress)
+                @Html.LabelFor(m => m.DisplayName)
+                @Html.TextBoxFor(m => m.DisplayName, new { placeHolder = "Display Name", @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.DisplayName)
             </div>
             <div class="form-group">
                 @Html.Label("accounttype", "Account Type")
