--- a/Capstone.Web/Views/Users/Login.cshtml
+++ b/Capstone.Web/Views/Users/Login.cshtml
@@ -13,8 +13,8 @@
         @using (Html.BeginForm("Login", "Users", FormMethod.Post))
         {
             <div class="form-group">
-                @Html.LabelFor(m => m.Email)
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "User Name" })
+                <label for="Email">Email:</label>
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
                 @Html.ValidationMessageFor(m => m.Email)
             </div>
             <div class="form-group">
