--- a/Capstone.Web/Views/Tournament/CreateTournamentForm.cshtml
+++ b/Capstone.Web/Views/Tournament/CreateTournamentForm.cshtml
@@ -12,8 +12,8 @@
 
         <div>
             @Html.Label("Tournament Name: \t\t")
-            @Html.TextBoxFor(m => m.Name, new { placeholder = "Tournament Name" })
-            @Html.ValidationMessageFor(m => m.Name)
+            @Html.TextBoxFor(m => m.TournamentName, new { placeholder = "Tournament Name" })
+            @Html.ValidationMessageFor(m => m.TournamentName)
         </div>
         <div>
             @Html.Label("Amount of Players: \t\t")
