--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -12,17 +12,23 @@
     <link href="~/Content/style.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/stylesheet.css" rel="stylesheet" />
-
+    <link href="~/Content/jquery.bracket.min.css" rel="stylesheet" />
+   
     <script src="https://use.fontawesome.com/b6042e8b1f.js"></script>
 
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/additional-methods.min.js"></script>
     <!-- BOOTSTRAPPER -->
-    <script src="~/Scripts/bootstrapper.js"></script>
-
-
+    <script src="~/Scripts/bootstrap.js"></script>
+   
+    <script src="~/Scripts/jquery-3.1.1.intellisense.js"></script>
+    @*<script src="~/Scripts/jquery-3.1.1.js"></script>
+    <script src="~/Scripts/jquery.validate-vsdoc.js"></script>*@
+    <script src="~/Scripts/jquery-3.1.1.slim.js"></script>
+    <script src="~/Scripts/main.js"></script>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/jquery.bracket.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 </head>
 <body>
     <header>
