--- a/Capstone.Web/Views/Tournament/Detail.cshtml
+++ b/Capstone.Web/Views/Tournament/Detail.cshtml
@@ -4,35 +4,34 @@
 }
 @model Tournament
 
+<div class="container">
+    <div class="jumbotron" style="margin-top:40px;">
 
-<div class="jumbotron" style="margin-top:80px;">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>@Model.TournamentName</h2>
+                <input type="hidden" id="tourId" value="@Model.TournamentId" />
+            </div>
+            <div class="col-md-4">
+                <h3> Hosted By </h3><span>@Model.OrganizerName</span>
+                <h4>Status: @Model.GameStatus</h4>
+            </div>
+            <div class="col-md-4">
+                <h4>@Model.CompetitorLimit Player Single Eliminations</h4>
+                <h4>@Model.GameName</h4>
+            </div>
+            <div class="col-md-4">
 
-    <div class="row">
-        <div class="col-md-12">
-            <h2>@Model.TournamentName</h2>
-            <input type="hidden" id="tourId" value="@Model.TournamentId" />
-        </div>
-        <div class="col-md-4">
-            <h3> Hosted By </h3><span>@Model.OrganizerName</span>
-            <h4>Status: @Model.GameStatus</h4>
-        </div>
-        <div class="col-md-4">
-            <h4>@Model.CompetitorLimit Player Single Eliminations</h4>
-            <h4>@Model.GameName</h4>
-        </div>
-        <div class="col-md-4">
+            </div>
             <br />
-            <button id="bracket" type="submit" class="btn btn-default"></button>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div id="minimal" class="demo">
-
+            <div class="col-md-12">
+                <button id="bracket" type="submit" class="btn btn-default">Generate Brackets</button>
             </div>
         </div>
     </div>
+
+        <div id="minimal" class="demo">
+
+        </div>
+
 </div>
-
-
