--- a/Capstone.Web/Content/style.css
+++ b/Capstone.Web/Content/style.css
@@ -206,3 +206,41 @@ fieldset input[type=text] {
   float:right;
   display: block;
 }
+
+#display-name {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar-right-side {
+    display:block;
+    float:right;
+}
+#t_table{
+    max-width:70%;
+    margin-left:auto;
+    margin-right:auto;
+}
+.logo-container{
+    width: 150px;
+    height: 150px;
+    background-image:url("~/Content/images/bracketsicon.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position: 50%, 50%;
+    display:inline-block;
+    float:left;
+}
+.header-text{
+    display:inline-block; 
+    float:left;
+    width:150px;
+    height:150px;
+}
+.header-text h2 {
+    padding: 5%, 0px, 0px,0px;
+    margin:0px;
+    border:0px;
+}
