--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>Tournament Managament App - @ViewBag.Title</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
-    <link href="~/Content/style.css" rel="stylesheet" />
+    
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/stylesheet.css" rel="stylesheet" />
+    <link href="~/Content/style.css" rel="stylesheet" />
     <link href="~/Content/jquery.bracket.min.css" rel="stylesheet" />
    
     <script src="https://use.fontawesome.com/b6042e8b1f.js"></script>
@@ -32,7 +32,16 @@
 </head>
 <body>
     <header>
-        <img src="~/Content/images/bowling.jpg" />
+        <div class="page-header">
+            <div class="logo-container">
+                <img style="max-width:333px; max-height:333px;" src="~/Content/images/bracketsicon.png" />
+            </div>
+            <div class="header-text">
+                <h2>Tournament</h2><br />
+                <h2>Organization</h2><br />
+                <h2>System</h2>
+            </div>
+        </div>
     </header>
     <nav class="navbar-inverse navbar-nav">
         <ul id="menu">
