--- a/Capstone.Web/Views/Tournament/Browse.cshtml
+++ b/Capstone.Web/Views/Tournament/Browse.cshtml
@@ -6,11 +6,11 @@
 }
 <div class='container-fluid -with-content-gutters -width-limited' style="margin-top:50px;">
     <div class="row">
-        <div class="col-md-6">
+        <div style="text-align:center;" class="col-md-12">
             <h2>Tournaments</h2>
         </div>
     </div>
-    <div class='table-responsive'>
+    <div class='table-responsive' id="t_table">
         <table class='table table-striped table-bordered'>
             <thead>
                 <tr>
