--- a/Capstone.Web/Views/Tournament/CreateTournamentForm.cshtml
+++ b/Capstone.Web/Views/Tournament/CreateTournamentForm.cshtml
@@ -12,32 +12,32 @@
             <div class="col-sm-4" style="margin-bottom:40px;">
                 <h2>Create New Tournament</h2>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.TournamentName)
+                    @Html.LabelFor(m => m.TournamentName, "Tournament Name")
                     @Html.TextBoxFor(m => m.TournamentName, new { placeHolder = "Tournament Name", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.TournamentName)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.GameName)
+                    @Html.LabelFor(m => m.GameName, "Game Type")
                     @Html.TextBoxFor(m => m.GameName, new { placeHolder = "Game", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.GameName)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.GameType)
+                    @Html.LabelFor(m => m.GameType,"Tournament Type")
                     @Html.TextBoxFor(m => m.GameType, new { placeHolder = "SE for Single Elimination", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.GameType)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.StartDate)
-                    @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control" })
+                    @Html.LabelFor(m => m.StartDate, "Start Date")
+                    @Html.TextBoxFor(m => m.StartDate, new { placeholder = "01/01/2017", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.StartDate)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.EndDate)
-                    @Html.TextBoxFor(m => m.EndDate, new { @class = "form-control" })
+                    @Html.LabelFor(m => m.EndDate, "End Date")
+                    @Html.TextBoxFor(m => m.EndDate, new { placeholder = "12/30/2017", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.EndDate)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.CompetitorLimit)
+                    @Html.LabelFor(m => m.CompetitorLimit, "# of Players")
                     @Html.TextBoxFor(m => m.CompetitorLimit, new { placeHolder = "Max Participants", @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.EndDate)
                 </div>
